--- a/examples/ATV2/CMakeLists.txt
+++ b/examples/ATV2/CMakeLists.txt
@@ -1,3 +1,3 @@
-project(Look_a_Cat)
-add_executable(${PROJECT_NAME} camera.cpp cat.cpp  ground.cpp main.cpp window.cpp)
+project(ATV2)
+add_executable(${PROJECT_NAME} camera.cpp cat.cpp ground.cpp main.cpp window.cpp)
 enable_abcg(${PROJECT_NAME})
